Enter Manually Done with pending design changes

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,4 +19,5 @@
     <string name="gender">Gender</string>
     <string name="log_out">Log Out</string>
     <string name="cups_of_water">Cups Of Water:</string>
+    <string name="enter_manually">Enter Manually</string>
 </resources>
